--- a/public/contact.html
+++ b/public/contact.html
@@ -167,7 +167,7 @@
                                         <p class="help-block text-danger"></p>
                                     </div>
                                     <div class="control-group">
-                                        <input type="email" class="form-control" id="email" placeholder="Your Email" required="required" data-validation-required-message="Please enter your email" />
+                                        <input type="text" class="form-control" id="comp" placeholder="Your Company" required="required" data-validation-required-message="Please enter your email" />
                                         <p class="help-block text-danger"></p>
                                     </div>
                                      <div class="control-group">
