--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -157,7 +157,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Mondae Nissin</h3>
-                                    <a href="MN01.html" class="btnk"  >+</a>
+                                    <a href="MN01.html" class="btn"  >+</a>
                                 </div>
                             </div>
                         </div>
@@ -167,12 +167,12 @@
                                     <img src="img/portfolio-2.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            โครงการก่อสร้างสถานีรถไฟฟ้าสายสีส้ม (M&E System Work)
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Orange Line</h3>
+                                    <h3>Orange Line Metropolitan</h3>
                                     <a class="btn" href="UN01.html" >+</a>
                                 </div>
                             </div>
@@ -183,7 +183,7 @@
                                     <img src="img/portfolio-3.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                           โครงการก่อสร้างอาคารผู้ป่วยนอก <br>(M&E System Work)
                                         </p>
                                     </div>
                                 </div>
@@ -199,12 +199,12 @@
                                     <img src="img/portfolio-5.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            โครงการก่อสร้างกำแพงกันดิน<br>โรงงานทีซีฟาร์มาซูติคอล บางบอน 
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Protection Wall , TC Phamacheutical</h3>
+                                    <h3>Piling and Protection concrete wall</h3>
                                     <a class="btn" href="T.C.html" >+</a>
                                 </div>
                             </div>
@@ -215,12 +215,12 @@
                                     <img src="img/portfolio-6.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            โครงการก่อสร้าง Substation 24 KV <br>การประปานครหลวงสำนักงานใหญ่
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Substation 24 kv Bldg., การประปา</h3>
+                                    <h3>Substation 24 kv Building</h3>
                                     <a class="btn" href="MEA2.html" >+</a>
                                 </div>
                             </div>
@@ -231,12 +231,13 @@
                                     <img src="img/portfolio-6.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            โครงการก่อสร้าง Substation 115 KV <br>การไฟฟ้านครหลวง <br>นิคมอุตสาหกรรมลาดกระบัง 
+
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Substation 115 kv Bldg., MEA (Ladkrabung)</h3>
+                                    <h3>Substation 115 kv Building</h3>
                                     <a class="btn" href="MEA.html" >+</a>
                                 </div>
                             </div>
@@ -247,7 +248,7 @@
                                     <img src="img/portfolio-6.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            โครงการก่อสร้างและปรับปรุงสายส่งระบบ 115 KV สถานีไฟฟ้าแรงสูงภูเก็ต 3
                                         </p>
                                     </div>
                                 </div>
@@ -263,13 +264,15 @@
                                     <img src="img/portfolio-6.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            10th Floors Car Park Building, Petkasem 2 Hospital
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>10th Fl. Car Park Bldg., PKS 2 Hospital</h3>
-                                    <a class="btn" href="Petchkasem 2.html" >+</a>
+                                    <h3>
+                                        Petkasem 2 Hospital (Bangkok)
+                                    </h3>
+                                    <a class="btn" href="Petkasem2.html" >+</a>
                                 </div>
                             </div>
                         </div>
@@ -296,12 +299,12 @@
                                     <img src="img/portfolio-6.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            The Circle Ratchapruk <br>Renovate Phase 1
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>The Circle Ratchapruk Renovate Phase 1</h3>
+                                    <h3>The Circle Ratchapruk</h3>
                                     <a class="btn" href="Circle1.html" >+</a>
                                 </div>
                             </div>
@@ -312,12 +315,12 @@
                                     <img src="img/portfolio-6.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            SIG Combibloc Factory Expansion
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>SIG Combibloc</h3>
+                                    <h3>Factory Expansion</h3>
                                     <a class="btn" href="SIG.html" >+</a>
                                 </div>
                             </div>
@@ -328,12 +331,12 @@
                                     <img src="img/portfolio-6.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            Villa Market, The Circle Ratchapruk
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Villa Market, The Circle Ratchapruk</h3>
+                                    <h3>The Circle Ratchapruk</h3>
                                     <a class="btn" href="Circle.html">+</a>
                                 </div>
                             </div>
@@ -344,12 +347,13 @@
                                     <img src="img/portfolio-6.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            12.5 Mw  Solar Power Plant for <br>BCP Nongkee, Buriram 
+
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Solar Power Plant (Nongkee, Buriram)</h3>
+                                    <h3>12.5 Mw Solar Power Plant </h3>
                                     <a class="btn" href="BCP , Buriram2.html" >+</a>
                                 </div>
                             </div>
@@ -360,12 +364,12 @@
                                     <img src="img/portfolio-6.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            12.5 Mw  Solar Power Plant for <br>BCP Prakonchai, Buriram
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Solar Power Plant (Prakonchai, Buriram)</h3>
+                                    <h3>12.5 Mw  Solar Power Plant</h3>
                                     <a class="btn" href="BCP , Buriram.html" >+</a>
                                 </div>
                             </div>
@@ -376,12 +380,12 @@
                                     <img src="img/portfolio-6.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                           25 Mw  Solar Power Plant for <br>BCP Kabinburi, Prachinburi 
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Solar Power Plant (Nakam, Prachinburi)</h3>
+                                    <h3>25 Mw  Solar Power Plant</h3>
                                     <a class="btn" href="BCP , Prachinburi.html" >+</a>
                                 </div>
                             </div>
@@ -392,12 +396,12 @@
                                     <img src="img/portfolio-6.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                           25 Mw  Solar Power Plant for <br>BCP Bang Pa Hun, Ayutthaya
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Solar Power Plant (Bang Pa Hun, Ayutthaya)</h3>
+                                    <h3>25 Mw  Solar Power Plant</h3>
                                     <a class="btn" href="BCP , Ayutthaya.html">+</a>
                                 </div>
                             </div>
@@ -408,12 +412,12 @@
                                     <img src="img/portfolio-6.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            25 Mw  Solar Power Plant for <br>BCP Bamnejnarong, Chaiyapum
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Solar Power Plant (Bamnejnarong, Chaiyapum)</h3>
+                                    <h3>25 Mw  Solar Power Plant</h3>
                                     <a class="btn" href="BCP, Chaiyapum.html">+</a>
                                 </div>
                             </div>
@@ -424,12 +428,12 @@
                                     <img src="img/portfolio-6.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            44 Mw  Solar Power Plant for <br>BCP Bang Pa-in, Ayutthaya
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Solar Power Plant (Bang Pa-in, Ayutthaya)</h3>
+                                    <h3>44 Mw  Solar Power Plant</h3>
                                     <a class="btn" href="BCP.html">+</a>
                                 </div>
                             </div>
@@ -440,12 +444,12 @@
                                     <img src="img/portfolio-6.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                           ESSILOR Manufacturing's <br>Canteen Extension 
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>ESSILOR Canteen Extension</h3>
+                                    <h3>ESSILOR's Canteen Extension</h3>
                                     <a class="btn" href="ESSILOR.html" >+</a>
                                 </div>
                             </div>
@@ -457,7 +461,7 @@
                                     <img src="img/portfolio-6.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            NISSAN CAR PARK
                                         </p>
                                     </div>
                                 </div>
