--- a/public/Petkasem2.html
+++ b/public/Petkasem2.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Petchkasem 2 Hospital (Bangkok)</title>
+        <title>Petkasem 2 Hospital (Bangkok)</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Construction Company Website Template" name="keywords">
         <meta content="Construction Company Website Template" name="description">
@@ -113,7 +113,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <h2>Petchkasem 2 Hospital (Bangkok)</h2>
+                            <h2>Petkasem 2 Hospital (Bangkok)</h2>
                         </div>
                         <!-- <div class="col-12">
                             <a href="index.html">Home</a>
@@ -130,7 +130,7 @@
                         <div class="row">
                             <div class="col-lg-10">
                                 <div class="section-header text">
-                                    <p>Owner  &nbsp; &nbsp;   : Petchkasem 2 Hospital Co., Ltd.</p>
+                                    <p>Owner  &nbsp; &nbsp;   : Petkasem 2 Hospital Co., Ltd.</p>
                                     <br />
                                     <!-- <p>Main Contractor &nbsp; &nbsp;	  : Poseidon Associate Group Co., Ltd.</p>
                                     <br /> -->
