--- a/public/service.html
+++ b/public/service.html
@@ -145,7 +145,6 @@
                                 </div>
                                 <div class="service-text">
                                     <h3>TURNKEY DESIGN AND BUILD</h3>
-                                    <a class="btn" href="img/service-1.jpg" data-lightbox="service">+</a>
                                 </div>
                             </div>
                         </div>
@@ -161,7 +160,6 @@
                                 </div>
                                 <div class="service-text">
                                     <h3>CONSTRUCTION WORK</h3>
-                                    <a class="btn" href="img/service-3.jpg" data-lightbox="service">+</a>
                                 </div>
                             </div>
                         </div>
@@ -177,25 +175,7 @@
                                     </div>
                                 </div>
                                 <div class="service-text">
-                                    <h3>MECHANICAL WORK</h3>
-                                    <a class="btn" href="img/service-5.jpg" data-lightbox="service">+</a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                            <div class="service-item">
-                                <div class="service-img">
-                                    <img src="img/service-5.jpg" alt="Image">
-                                    <div class="service-overlay">
-                                        <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="service-text">
-                                    <h3>ELECTRICAL SYSTEM WORK</h3>
-                                    <a class="btn" href="img/service-5.jpg" data-lightbox="service">+</a>
+                                    <h3>MECHANICAL & ELECTRICAL SYSTEM WORK</h3>
                                 </div>
                             </div>
                         </div>
