--- a/public/index.html
+++ b/public/index.html
@@ -298,15 +298,15 @@
                             <div class="service-item">
                                 <div class="service-img">
                                     <img src="img/service-4.jpg" alt="Image">
-                                    <div class="service-overlay">
+                                    <!-- <div class="service-overlay">
                                         <p>
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
                                         </p>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="service-text">
                                     <h3>CONSTRUCTION WORK</h3>
-                                    <a class="btn" >+</a>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -314,31 +314,14 @@
                             <div class="service-item">
                                 <div class="service-img">
                                     <img src="img/service-5.jpg" alt="Image">
-                                    <div class="service-overlay">
+                                    <!-- <div class="service-overlay">
                                         <p>
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
                                         </p>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="service-text">
-                                    <h3>MECHANICAL WORK</h3>
-                                    <a class="btn" >+</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
-                            <div class="service-item">
-                                <div class="service-img">
-                                    <img src="img/service-6.jpg" alt="Image">
-                                    <div class="service-overlay">
-                                        <p>
-                                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
-                                        </p>
-                                    </div>
-                                </div>
-                                <div class="service-text">
-                                    <h3>ELECTRICAL SYSTEM WORK</h3>
-                                    <a class="btn" >+</a>
+                                    <h3>MECHANICAL & ELECTRICAL SYSTEM WORK</h3>
                                 </div>
                             </div>
                         </div>
