--- a/public/service.html
+++ b/public/service.html
@@ -137,11 +137,11 @@
                             <div class="service-item">
                                 <div class="service-img">
                                     <img src="img/service-1.jpg" alt="Image">
-                                    <div class="service-overlay">
+                                    <!-- <div class="service-overlay">
                                         <p>
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
                                         </p>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="service-text">
                                     <h3>TURNKEY DESIGN AND BUILD</h3>
@@ -152,11 +152,11 @@
                             <div class="service-item">
                                 <div class="service-img">
                                     <img src="img/service-3.jpg" alt="Image">
-                                    <div class="service-overlay">
+                                    <!-- <div class="service-overlay">
                                         <p>
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
                                         </p>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="service-text">
                                     <h3>CONSTRUCTION WORK</h3>
@@ -168,11 +168,11 @@
                             <div class="service-item">
                                 <div class="service-img">
                                     <img src="img/service-5.jpg" alt="Image">
-                                    <div class="service-overlay">
+                                    <!-- <div class="service-overlay">
                                         <p>
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
                                         </p>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="service-text">
                                     <h3>MECHANICAL & ELECTRICAL SYSTEM WORK</h3>
