--- a/public/index.html
+++ b/public/index.html
@@ -739,7 +739,7 @@
                             </ul>
                         </div>
                     </div> -->
-                    <div class="row portfolio-container">
+                     <div class="row portfolio-container">
                         <div class="col-lg-4 col-md-6 col-sm-12 portfolio-item first wow fadeInUp" data-wow-delay="0.1s">
                             <div class="portfolio-warp">
                                 <div class="portfolio-img">
@@ -754,7 +754,7 @@
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Mondae Nissin</h3>
-                                    <a class="btn" href="MN01.html" data-lightbox="portfolio">+</a>
+                                    <a href="MN01.html" class="btn"  >+</a>
                                 </div>
                             </div>
                         </div>
@@ -764,13 +764,13 @@
                                     <img src="img/portfolio-2.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                            โครงการก่อสร้างสถานีรถไฟฟ้าสายสีส้ม (M&E System Work)
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Orange Line</h3>
-                                    <a class="btn" href="UN01.jpg" data-lightbox="portfolio">+</a>
+                                    <h3>Orange Line Metropolitan</h3>
+                                    <a class="btn" href="UN01.html" >+</a>
                                 </div>
                             </div>
                         </div>
@@ -780,13 +780,13 @@
                                     <img src="img/portfolio-3.jpg" alt="Image">
                                     <div class="portfolio-overlay">
                                         <p>
-                                            Lorem ipsum dolor sit amet elit. Phasel nec pretium mi. Curabit facilis ornare velit non. Aliqu metus tortor, auctor id gravi condime, viverra quis sem.
+                                           โครงการก่อสร้างอาคารผู้ป่วยนอก <br>(M&E System Work)
                                         </p>
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
                                     <h3>Srinakarivirot Hospital</h3>
-                                    <a class="btn" href="TG01.jpg" data-lightbox="portfolio">+</a>
+                                    <a class="btn" href="TG01.html" >+</a>
                                 </div>
                             </div>
                         </div>
