--- a/public/index.html
+++ b/public/index.html
@@ -282,15 +282,14 @@
                             <div class="service-item">
                                 <div class="service-img">
                                     <img src="img/service-3.jpg" alt="Image">
-                                    <div class="service-overlay">
+                                    <!-- <div class="service-overlay">
                                         <p>
                                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nec pretium mi. Curabitur facilisis ornare velit non vulputate. Aliquam metus tortor, auctor id gravida condimentum, viverra quis sem.
                                         </p>
-                                    </div>
+                                    </div> -->
                                 </div>
                                 <div class="service-text">
                                     <h3>TURNKEY DESIGN AND BUILD</h3>
-                                    <a class="btn">+</a>
                                 </div>
                             </div>
                         </div>
