--- a/public/index.html
+++ b/public/index.html
@@ -357,48 +357,48 @@
 
 
             <!-- Team Start -->
-            <!-- <div class="team">
+            <div class="team">
                 <div class="container">
                     <div class="section-header text-center">
-                        <p>Our Team</p>
-                        <h2>Meet Our Engineer</h2>
+                        <p>Our Executive</p>
+                        <h2>Meet Our Executive</h2>
                     </div>
                     <div class="row">
-                        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                        <div class="container col-3 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="team-item">
                                 <div class="team-img">
                                     <img src="img/team-1.jpg" alt="Team Image">
                                 </div>
                                 <div class="team-text">
-                                    <h2>Adam Phillips</h2>
+                                    <h2>Rojwasin Kuruphanpakdee</h2>
                                     <p>CEO & Founder</p>
                                 </div>
-                                <div class="team-social">
+                                <!-- <div class="team-social">
                                     <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
                                     <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
-                        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
+                         <div class="container col-lg-3 wow fadeInUp" data-wow-delay="0.2s">
                             <div class="team-item">
                                 <div class="team-img">
                                     <img src="img/team-2.jpg" alt="Team Image">
                                 </div>
                                 <div class="team-text">
-                                    <h2>Dylan Adams</h2>
-                                    <p>Civil Engineer</p>
+                                    <h2>Wuttisit Kuruphanpakdee</h2>
+                                    <p>Executive Assistant</p>
                                 </div>
-                                <div class="team-social">
+                                <!-- <div class="team-social">
                                     <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
                                     <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                                </div>
+                                </div> -->
                             </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                        </div> 
+                        <!-- <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                             <div class="team-item">
                                 <div class="team-img">
                                     <img src="img/team-3.jpg" alt="Team Image">
@@ -414,8 +414,8 @@
                                     <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
+                        </div> -->
+                        <!-- <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.4s">
                             <div class="team-item">
                                 <div class="team-img">
                                     <img src="img/team-4.jpg" alt="Team Image">
@@ -431,10 +431,10 @@
                                     <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
-                        </div>
+                        </div> --> 
                     </div>
                 </div>
-            </div> -->
+            </div>
             <!-- Team End -->
             
 
@@ -800,6 +800,7 @@
                     <div class="row">
                         <div class="col-md-6 col-lg-3">
                             <div class="footer-contact">
+                                <h1>ActiveCon Co., Ltd.</h1>
                                 <h2>Office Contact</h2>
                                 <p><i class="fa fa-map-marker-alt"></i>77/15 M.3 Bangkruai-Sainoi Road, Bangsrithong, Bangkruai, Nonthaburi 11130</p>
                                 <p><i class="fa fa-phone-alt"></i>+6624432256,+66863884916</p>
