--- a/public/MN01.html
+++ b/public/MN01.html
@@ -184,7 +184,7 @@
                     <div class="row">
                         <div class="col-md-6 col-lg-3">
                             <div class="footer-contact">
-                                <!-- <h1>ActiveCon Co., Ltd.</h1> -->
+                                <h1>ActiveCon Co., Ltd.</h1>
                                 <h2>Office Contact</h2>
                                 <p><i class="fa fa-map-marker-alt"></i>77/15 M.3 Bangkruai-Sainoi Road, Bangsrithong, Bangkruai, Nonthaburi 11130</p>
                                  <p><i class="fa fa-phone-alt"></i>+6624432256,+66863884916</p>
