--- a/public/about.html
+++ b/public/about.html
@@ -146,7 +146,7 @@
                                 <p>
                                     ActiveCon is run under professional experience engineers who passed lots of construction projects which were successful and be memorized by all owners. Most of these successful projects were completed under high quality of work within the expected schedule together with satisfied after sales service . This concept is ActiveCon’s standard of work in the construction business.  
                                 </p>
-                                <a class="btn" href="about.html">Learn More</a>
+                                <!-- <a class="btn" href="about.html">Learn More</a> -->
                             </div>
                         </div>
                     </div>
