--- a/public/index.html
+++ b/public/index.html
@@ -256,7 +256,7 @@
                                    
                                    
                                     <div class="fact-text">
-                                        <p>- Conclusively manage and control the project to hand over with high quality and on-time delivery to meet customer requirements</p>
+                                        <p>- Conclusively manage and control the project to hand over with <br> &nbsp; high quality and on-time delivery to meet customer requirements</p>
                                         <p>- Consistently develop human resources  to be professional and skilled </p>
                                         <p>- Adapt to the change in construction technology and innovation</p>
                                     </div>
