--- a/public/index.html
+++ b/public/index.html
@@ -216,10 +216,10 @@
                             </div>
                             <div class="about-text">
                                 <p>
-                                    ActiveCon Co.,Ltd. was found on 25th  of May 2009 with the registered capital of 3 million baht to serve all clients for turn-key projects of most Construction Work mainly for factories, buildings, concrete slap/road and land development. We are also capable of serving M&E System Work for both industrial and buildings. In 2015, the company had a capital increase to 30 million baht. Today we are able to run the maximum size of each project for 200 to 300 million baht for around 3 projects simultaneously. We are growing up every year.
+                                    ActiveCon Co.,Ltd. was found on 25th  of May 2009 with the registered capital of 3 million baht to serve all clients for turn-key projects of most Construction Work mainly for factories, buildings, concrete slap/road and land development. We are also capable of serving M&E System Work for both industrial and buildings. In 2015,  <b>company had a capital increase to 30 million baht</b>. <br>Today we are able to run the maximum size of each project for 200 to 300 million baht for around 3 projects simultaneously. We are growing up every year.
                                 </p>
                                 <p>
-                                    ActiveCon is run under professional experience engineers who passed lots of construction projects which were successful and be memorized by all owners. Most of these successful projects were completed under high quality of work within the expected schedule together with satisfied after sales service . This concept is ActiveCon’s standard of work in the construction business.  
+                                    ActiveCon is run under professional experience engineers who passed lots of construction projects which were successful and be memorized by all owners. Most of these successful projects were completed under high quality of work within the expected schedule together with satisfied after sales service . <br>This concept is ActiveCon’s standard of work in the construction business.  
                                 </p>
                                 <a class="btn" href="about.html">See More</a>
                             </div>
@@ -357,7 +357,7 @@
 
 
             <!-- Team Start -->
-            <div class="team">
+            <!-- <div class="team">
                 <div class="container">
                     <div class="section-header text-center">
                         <p>Our Executive</p>
@@ -373,12 +373,12 @@
                                     <h2>Rojwasin Kuruphanpakdee</h2>
                                     <p>CEO & Founder</p>
                                 </div>
-                                <!-- <div class="team-social">
+                                <div class="team-social">
                                     <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
                                     <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                                </div> -->
+                                </div> 
                             </div>
                         </div>
                          <div class="container col-lg-3 wow fadeInUp" data-wow-delay="0.2s">
@@ -390,15 +390,15 @@
                                     <h2>Wuttisit Kuruphanpakdee</h2>
                                     <p>Executive Assistant</p>
                                 </div>
-                                <!-- <div class="team-social">
+                                <div class="team-social">
                                     <a class="social-tw" href=""><i class="fab fa-twitter"></i></a>
                                     <a class="social-fb" href=""><i class="fab fa-facebook-f"></i></a>
                                     <a class="social-li" href=""><i class="fab fa-linkedin-in"></i></a>
                                     <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
-                                </div> -->
+                                </div>
                             </div>
                         </div> 
-                        <!-- <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                        <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                             <div class="team-item">
                                 <div class="team-img">
                                     <img src="img/team-3.jpg" alt="Team Image">
@@ -431,10 +431,10 @@
                                     <a class="social-in" href=""><i class="fab fa-instagram"></i></a>
                                 </div>
                             </div>
-                        </div> --> 
+                        </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- Team End -->
             
 
