--- a/public/ESSILOR.html
+++ b/public/ESSILOR.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>ESSILOR Mnfg's Canteen Extension </title>
+        <title>ESSILOR Manufacturing's Canteen Extension </title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="Construction Company Website Template" name="keywords">
         <meta content="Construction Company Website Template" name="description">
@@ -113,7 +113,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
-                            <h2>ESSILOR Mnfg’s Canteen Extension </h2>
+                            <h2>ESSILOR Manufacturing’s Canteen Extension </h2>
                         </div>
                         <!-- <div class="col-12">
                             <a href="index.html">Home</a>
@@ -128,7 +128,7 @@
                 <div class="single">
                     <div class="container">
                         <div class="row">
-                            <div class="col-lg-10">
+                            <div class="col-lg-12">
                                 <div class="section-header text">
                                     <p>Owner &nbsp; &nbsp; &nbsp;&nbsp;  : Essilor Manufacturing (Thailand) Co., Ltd.</p>
                                     <br />
@@ -145,11 +145,12 @@
                                     <p>Year &nbsp; &nbsp;		: 2010-2011</p>
                                 </div>
                                 <br /><br />
+                                <img src="img/Essilor3.png">
+                                <br /><br />
                                 <img src="img/Essilor1.png">
                                 <br /><br />
                                 <img src="img/Essilor2.png">
-                                <br /><br />
-                                <img src="img/Essilor3.png">
+                                
                             </div>
                         </div>       
                     </div>    
