--- a/public/contact.html
+++ b/public/contact.html
@@ -146,8 +146,8 @@
                                     <i class="flaticon-call"></i>
                                     <div class="contact-text">
                                         <h2>Phone</h2>
-                                        <p>+6624432256</p>
-                                        <p>+66863884916</p>
+                                        <p>+66 2443 2256</p>
+                                        <p>+668 6388 4916</p>
                                     </div>
                                 </div>
                                 <div class="contact-item">
@@ -204,7 +204,7 @@
                                 <h1>ActiveCon Co., Ltd.</h1>
                                 <h2>Office Contact</h2>
                                 <p><i class="fa fa-map-marker-alt"></i>77/15 M.3 Bangkruai-Sainoi Road, Bangsrithong, Bangkruai, Nonthaburi 11130</p>
-                                <p><i class="fa fa-phone-alt"></i>+6624432256,+66863884916</p>
+                                <p><i class="fa fa-phone-alt"></i>+66 2443 2256 <br> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+668 6388 4916</p>
                                 <p><i class="fa fa-envelope"></i>wuttisit.atc@gmail.com</p>
                                 <!-- <div class="footer-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
