--- a/public/index.html
+++ b/public/index.html
@@ -249,14 +249,14 @@
                         </div>
                         <div class="col-md-6 fact-right wow slideInRight">
                             <div class="row">
-                                <div class="col-10">
+                                <div class="col-12">
                                     <div class= "fact-taxt h2">
                                         <p>Our Mission</p>
                                     </div>
                                    
                                    
                                     <div class="fact-text">
-                                        <p>- Conclusively manage and control the project to hand over with <br> &nbsp; high quality and on-time delivery to meet customer requirements</p>
+                                        <p>- Conclusively manage and control the project to hand over with high quality and on-time delivery to meet customer requirements</p>
                                         <p>- Consistently develop human resources  to be professional and skilled </p>
                                         <p>- Adapt to the change in construction technology and innovation</p>
                                     </div>
