--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -156,7 +156,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Mondae Nissin</h3>
+                                    <h3>Monde Nissin Chonburi</h3>
                                     <a href="MN01.html" class="btn"  >+</a>
                                 </div>
                             </div>
@@ -253,7 +253,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>Future Electrical Control</h3>
+                                    <h3>115 KV Transmission line <br>PEA Phuket </h3>
                                     <a class="btn" href="Future Electrical.html" >+</a>
                                 </div>
                             </div>
@@ -385,7 +385,7 @@
                                     </div>
                                 </div>
                                 <div class="portfolio-text">
-                                    <h3>25 Mw  Solar Power Plant</h3>
+                                    <h3>25 Mw Solar Farm <br>Kabinburi </h3>
                                     <a class="btn" href="BCP , Prachinburi.html" >+</a>
                                 </div>
                             </div>
