--- a/public/Nissan.html
+++ b/public/Nissan.html
@@ -130,20 +130,22 @@
                         <div class="row">
                             <div class="col-lg-10">
                                 <div class="section-header text">
-                                    <p>Owner  &nbsp; &nbsp;   : Autologic Co., Ltd.</p>
+                                    <p>Owner  &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;   : Autologic Co., Ltd.</p>
                                     <br />
                                     <p>Main Contractor &nbsp; &nbsp;	  : Poseidon Associate Group Co., Ltd.</p>
                                     <br />
-                                    <p>Scope of Work &nbsp; &nbsp;	: Turnkey Design and Build, Civil Work,  Mechanical Work and Electrical System Work   </p>
+                                    <p>Scope of Work &nbsp; &nbsp; &nbsp;	: Turnkey Design and Build, Civil Work, M&E System Work   </p>
                                     <br />
-                                    <p>Location &nbsp; &nbsp;		: Eastern Seaboard Industrial Estate (Rayong)</p>
+                                    <p>Location &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp;&nbsp;		: Eastern Seaboard Industrial Estate (Rayong)</p>
                                     <br />
-                                    <p>Area	&nbsp; &nbsp;	: 100 Rai </p>
+                                    <p>Area	&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;&nbsp; &nbsp;: 100 Rai </p>
                                     <br />
-                                    <p>Project Value &nbsp; &nbsp;	: 49 Million Baht   </p>
+                                    <p>Project Value  &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; : 49 Million Baht   </p>
                                     <br />
-                                    <p>Year &nbsp; &nbsp;		: 2009-2010</p>
+                                    <p>Year &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;	&nbsp; &nbsp; &nbsp;&nbsp;: 2009-2010</p>
                                 </div>
+                                <br /><br />
+                                <img src="img/Nissan11.png">
                                 <br /><br />
                                 <img src="img/Nissan12.png">
                                 <br /><br />
@@ -164,8 +166,7 @@
                                 <img src="img/Nissan9.png">
                                 <br /><br />
                                 <img src="img/Nissan10.png">
-                                <br /><br />
-                                <img src="img/Nissan11.png">
+                                
                             </div>
                         </div>       
                     </div>    
