--- a/public/index.html
+++ b/public/index.html
@@ -216,7 +216,7 @@
                             </div>
                             <div class="about-text">
                                 <p>
-                                    ActiveCon Co.,Ltd. was found on 25th  of May 2009 with the registered capital of 3 million baht to serve all clients for turn-key projects of most Construction Work mainly for factories, buildings, concrete slap/road and land development. We are also capable of serving M&E System Work for both industrial and buildings. In 2015,  <b>company had a capital increase to 30 million baht</b>. <br>Today we are able to run the maximum size of each project for 200 to 300 million baht for around 3 projects simultaneously. We are growing up every year.
+                                    ActiveCon Co.,Ltd. was found on 25th  of May 2009 with the registered capital of 3 million baht to serve all clients for turn-key projects of most Construction Work mainly for factories, buildings, concrete slap/road and land development. We are also capable of serving M&E System Work for both industrial and buildings. In 2015,  <b>company had a capital increase to 30 million baht</b>.Today we are able to run the maximum size of each project for 200 to 300 million baht for around 3 projects simultaneously. We are growing up every year.
                                 </p>
                                 <p>
                                     ActiveCon is run under professional experience engineers who passed lots of construction projects which were successful and be memorized by all owners. Most of these successful projects were completed under high quality of work within the expected schedule together with satisfied after sales service . <br>This concept is ActiveCon’s standard of work in the construction business.  
@@ -320,7 +320,7 @@
                                     </div> -->
                                 </div>
                                 <div class="service-text">
-                                    <h3>MECHANICAL & ELECTRICAL SYSTEM WORK</h3>
+                                    <h3>M&E SYSTEM WORK</h3>
                                 </div>
                             </div>
                         </div>
